[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/card/card_highlight.png" type="Texture" id=1]
[ext_resource path="res://src/MainScene/FieldSpaceArea/FieldSpaceArea.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76, 106 )

[node name="FieldSpaceArea" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.322671, 1.02921 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
